--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,12 +5,46 @@
 }
 
 body {
-	background-image: url("../images/bg.jpg");
+	background-image: url("../images/castle.jpg");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
 	height: 100vh;
-	overflow-x: hidden;
+}
+
+h4 {
+	font-size: 20px;
+}
+
+a {
+	color: white;
+	text-decoration: none;
+}
+
+#restart {
+	position: absolute;
+	left: 920px;
+	bottom: 10px;
+	right: 70px;
+}
+
+.heading {
+	background-color: grey;
+	border: 2px solid black;
+	position: absolute;
+	left: 10px;
+	top: 20px;
+	color: white;
+}
+
+.note {
+	position: absolute;
+	right: 370px;
+	top: 5px;
+	background-color: grey;
+	border: 2px solid black;
+	height: 100px;
+	width: 200px;
 }
 
 .character {
@@ -24,6 +58,7 @@ body {
 	box-shadow: 3px 2px #888888;
 }
 
+
 #ai {
 	top: 100px;
 }
@@ -32,15 +67,30 @@ body {
 	top: 550px;
 }
 
-#truck {
+
+#spartan {
 	height: 250px;
 }
 
-#plane {
+#spartan1 {
 	height: 100px;
 }
 
-hr {
-	width: 100%;
-	border: 2px solid black;
+.first-small-spartan {
+	position: absolute;
+	top: 160px;
+}
+
+.second-small-spartan {
+	position: absolute;
+	top: 270px;
+}
+.third-small-spartan {
+	position: absolute;
+	top: 360px;
+}
+
+.fourth-small-spartan {
+	position: absolute;
+	top: 440px;
 }
